# OOP

oop_exercise_01/: CMakeLists.txt  modulo.cpp  test_02.txt  test_03.txt
oop_exercise_02/: CMakeLists.txt  main.cpp  modulo.cpp  modulo.hpp
oop_exercise_03/: CMakeLists.txt  Figures.cpp  Figures.hpp  figure.hpp  main.cpp  pentagon.hpp  rhombus.cpp  rhombus.hpp  test.cpp  test_01.txt  test_02.txt
oop_exercise_04/: CMakeLists.txt  hexagon.hpp  main.cpp  meson.build  pentagon.hpp  templates.hpp  test_01.txt  test_02.txt  vertex.hpp
oop_exercise_05/: main.cpp  stack.hpp  test_01.txt  test_02.txt
oop_exercise_06/: allocator.hpp  main.cpp  rhombus.hpp  stack.hpp  test_03.txt  tvector.hpp
oop_exercise_07/: CMakeLists.txt  command.cpp  command.hpp  document.cpp  document.hpp  editor.cpp  editor.hpp  factory.cpp  factory.hpp  figure.hpp  hexagon.cpp  hexagon.hpp  main.cpp  pentagon.cpp  pentagon.hpp  point.cpp  point.hpp  rhombus.cpp  rhombus.hpp  test_01.txt  test_02.txt
oop_exercise_08/: CMakeLists.txt  figure.hpp  hexagon.cpp  hexagon.hpp  main.cpp  pentagon.cpp  pubsub.hpp  test_1_argv.txt
